wait image visibility fixed

--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,15 @@ body {
     padding: 0;
     height: 100%;
     background: black;
-    display: flex;
-    flex-direction: column;
+    position: relative;
 }
 
 #wait {
-    display: none;
-    margin: auto;    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
     text-align: center;
     font-family:'Segoe UI', sans-serif;
     font-size: 1.5rem;
@@ -21,8 +23,8 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    width: 10rem;
-    height: 10rem;
+    width: 7rem;
+    height: 7rem;
     margin: 1rem;
 }
 
@@ -32,11 +34,14 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    /* oben anfangen */
     align-items: center;
-    position: relative;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     max-width: 100%;
     max-height: 100%;
+    background-color: black;
+    display: none;
 }
 
 video,
